# brio-project

./: .gitignore  Backup of Report.wbk  PROGRESS.md  README.md  Report.docx  test.install  ~$Report.docx  ~WRL0973.tmp  ~WRL0997.tmp  ~WRL1256.tmp  ~WRL1419.tmp  ~WRL1914.tmp  ~WRL2046.tmp  ~WRL2323.tmp  ~WRL2903.tmp  ~WRL2912.tmp  ~WRL3246.tmp  ~WRL3512.tmp
backend/: package.json
backend/api/: index.js
backend/core/: meson.build  test.html  wasm.ini
backend/core/include/: Connector.h  Obb.h  Part.h  Piece.h  PieceList.h  ReadJson.h  Track.h  TrackGenerator.h  Vec2D.h  meson.build
backend/core/src/: Connector.cpp  Obb.cpp  ParseJson.cpp  Part.cpp  Piece.cpp  PieceList.cpp  ReadJson.cpp  Track.cpp  TrackGenerator.cpp  Vec2D.cpp  main.cpp
backend/ressources/: pieces.json
backend/src/: frontendRouter.js  (+1 more)
core/: compile.sh  export.sh  meson.build  wasm.ini
core/include/: Circuit.h  Connector.h  Loop.h  Obb.h  ParseJson.h  Part.h  Piece.h  Track.h  Vec2D.h  meson.build
core/src/: Circuit.cpp  Connector.cpp  Loop.cpp  Obb.cpp  ParseJson.cpp  Part.cpp  Piece.cpp  Track.cpp  main.cpp
core/subprojects/jsoncpp-1.9.5/: .meson-subproject-wrap-hash.txt
docs/: Vec2d.js  draw.js  index.css  index.html  index.js  loader.css  main.data  measurements.js  tooltip.css
frontend/: index.html  package-lock.json
measurements/: .~lock.heuristic_comparison.csv#  circle_performance_comparison.xlsx  heuristic_comparison.csv  piecesInBetween.txt
progression_images/: circle_performance_comparison.xlsx
wasmtest/: bindings.cpp  test.cpp  test.h  test.html  test.js  test.wasm
(+57 files in other folders)
